# agentcore-samples

./: .gitignore  .secrets.baseline  CONTRIBUTORS.md  README.md
01-features/: README.md
01-features/01-harness/: README.md
01-features/03-connect-your-agent-to-anything/: README.md
01-features/06-observe-evaluate-optimize-your-agent/: README.md
02-use-cases/: README.md
02-use-cases/01-conversational-agents/: README.md
02-use-cases/02-workflow-automation-agents/: README.md
02-use-cases/02-workflow-automation-agents/event-driven-claims-agent/app/claimsagent/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt  routing.py
02-use-cases/02-workflow-automation-agents/event-driven-claims-agent/app/claimsagent/memory/: session.py
02-use-cases/02-workflow-automation-agents/receipts-intelligent-document-processing-agent/app/receiptsagent/: Dockerfile  README.md  config.py  gateway_auth.py  identity.py  main.py  parsing.py  pyproject.toml  requirements.txt
02-use-cases/02-workflow-automation-agents/receipts-intelligent-document-processing-agent/app/receiptsagent/mcp_client/: __init__.py
02-use-cases/02-workflow-automation-agents/receipts-intelligent-document-processing-agent/app/receiptsagent/memory/: __init__.py  session.py
02-use-cases/02-workflow-automation-agents/receipts-intelligent-document-processing-agent/app/receiptsagent/model/: __init__.py  ladder.py  load.py
02-use-cases/02-workflow-automation-agents/receipts-intelligent-document-processing-agent/app/receiptsagent/tools/: __init__.py  ocr.py  structured_output.py  table_parser.py
02-use-cases/A2A-multi-agent-incident-response/: requirements.txt
02-use-cases/AWS-operations-agent/: requirements.txt
02-use-cases/customer-support-assistant-vpc/agent/: pyproject.toml  requirements.txt
02-use-cases/finance-personal-assistant/: requirements.txt
06-workshops/: utils.py
(+449 files in other folders)
