[project]
name = "customer-support-assistant"
version = "0.1.0"
description = "Customer Support Assistant with VPC"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=0.1.4",
    "boto3>=1.40.35",
    "botocore>=1.40.35",
    "loguru>=0.7.3",
    "mcp[cli]>=1.14.1",
    "psycopg[pool]>=3.2.10",
    "pydantic>=2.11.9",
    "strands-agents>=1.9.1",
    "strands-agents-tools>=0.2.8",
    "uv>=0.11.15",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
