[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claimsagent"
version = "0.1.0"
description = "AgentCore Runtime Application using Strands SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro >= 0.18.0, < 1.0",
    "bedrock-agentcore >= 1.15.0, < 2.0",
    "botocore[crt] >= 1.43.36, < 2.0",
    "mcp >= 1.28.0, < 2.0",
    "strands-agents >= 1.44.0, < 2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
